--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,13 @@
   "devDependencies": {
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "^8.3.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.5.4"
   }
 }
