--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-openid-connect": "^2.8.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.18",
     "postcss": "^8.4.16",
     "postcss-cli": "^10.0.0"
