--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "hello-node",
+  "name": "sentence-writer",
   "version": "1.0.0",
-  "description": "hello-node-prj",
+  "description": "sentence-writer",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css",
     "start": "npm install && nodemon app.js"
   },
   "author": "kazuki-endo",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^10.4.12",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-openid-connect": "^2.8.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.18",
-    "postcss": "^8.4.16",
-    "postcss-cli": "^10.0.0"
+    "nodemon": "^2.0.18"
   },
   "devDependencies": {
-    "tailwindcss": "^3.1.8"
+    "@types/node": "^18.13.0",
+    "prisma": "^4.10.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
