--- a/docker/.env
+++ b/docker/.env
@@ -1,2 +1,10 @@
+# the project name of docker
+PROJECT_NAME='sentence-writer'
+
+# every kind of contexts
 BACKEND_CONTEXT='../backend'
 FRONTEND_CONTEXT='../frontend'
+DB_CONTEXT='../db'
+
+# the network name of docker
+DOCKER_NETWORK_NAME='${PROJECT_NAME}-network'
