update: connection setting between node and mysql

--- a/docker/docker-compose-app.yml
+++ b/docker/docker-compose-app.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - ${BACKEND_CONTEXT}:/app
     networks:
+      - shared-network
       - default
 
   frontend:
@@ -27,6 +28,7 @@ services:
     volumes:
       - ${FRONTEND_CONTEXT}:/app
     networks:
+      - shared-network
       - default
 
 networks:
