--- a/docker/docker-compose-db.yml
+++ b/docker/docker-compose-db.yml
@@ -16,6 +16,7 @@ services:
     container_name: "sentence-writer-db"
     networks:
       - default
+      - shared-network
 
 networks:
   shared-network:
