--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
   "author": "kazuki-endo",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.10.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-openid-connect": "^2.8.0",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.18"
   },
   "devDependencies": {
