--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.10.1",
+    "axios": "^1.3.4",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
