--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,10 @@
     "nodemon": "^2.0.18"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^18.13.0",
     "prisma": "^4.10.0",
     "ts-node": "^10.9.1",
