--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "sentence-writer",
+  "name": "sentencify",
   "version": "1.0.0",
-  "description": "sentence-writer",
-  "main": "app.js",
+  "description": "sentencify",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install && nodemon app.js"
+    "start": "npm install && nodemon"
   },
-  "author": "kazuki-endo",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.10.1",
     "axios": "^1.3.4",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "express-openid-connect": "^2.8.0",
-    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.18"
   },
@@ -25,9 +25,9 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mysql": "^2.15.21",
-    "@types/node": "^18.13.0",
+    "@types/node": "^18.15.8",
     "prisma": "^4.10.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2"
   }
 }
