feat: switching to NestJS from Express

--- a/docker/docker-compose-app.yml
+++ b/docker/docker-compose-app.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: docker/Dockerfile
     ports:
       - 3000:3000
-    command: ["npm", "run", "start"]
+    command: ["npm", "run", "start:dev"]
     image: "sentence-writer-backend"
     container_name: "sentence-writer-backend"
     volumes:
