--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "next": "12.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^13.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recoil": "^0.5.2",
     "sass": "^1.48.0",
     "swr": "^1.3.0"
