--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.3",
     "js-base64": "^3.7.5",
     "mysql": "^2.18.1",
+    "openai": "^3.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
