update: preparing for deploy in front

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,8 +2,8 @@
   "name": "frontend",
   "scripts": {
     "dev": "npm install && next dev -p 4000",
-    "build": "next build -p 4000",
-    "start": "next start -p 4000",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
